@startuml
skinparam classAttributeIconSize 0

title Class Diagram - US344 - Generation of a Drone Program

package "showmanagement.domain" {
    class ShowProposal {
        - List<Figure> sequenceFigures
        - Map<DroneModel, Integer> modelsUsed
        - Map<String, String> droneLanguageSpecifications
        - List<String> script
        - ShowProposalStatus status

        + setScript(script: List<String>): void
        + setStatus(status: ShowProposalStatus): void
        + getSequenceFigues(): List<Figure>
        + getModelsUsed(): Map<DroneModel, Integer>
        + getDroneLanguageSpecifications(): Map<String, String>
    }

    class Figure {
        - String name
        - Map<String, DslMetadata> dslVersions

        + name(): String
        + dslVersions(): Map<String, DslMetadata>
    }

    class DslMetadata {
        - String droneModel
        - List<String> dslLines

        + getDslLines(): List<String>
    }

    enum ShowProposalStatus {
        CREATED
        STAND_BY
        APPROVED
        ...
    }

    class DroneModel {
        - String identity
        + identity(): String
    }

    ShowProposal --> "1..*" Figure
    ShowProposal --> "1..*" DroneModel
    Figure --> "1..*" DslMetadata
}

package "showmanagement.application" {
    class GenerateShowProgramController {
        + generateProgramsForShow(showProposal: ShowProposal): Optional<ShowProposal>
    }
}

package "showmanagement.plugins" {
    class FigureValidationPlugin {
        + setDroneModelName(name: String): void
        + validate(dslLines: List<String>): List<String>
    }

    class DroneProgramsGenerator {
        + generateProgram(...): String
    }

    class DroneGenericPlugin {
        + validate(codeLines: List<String>): List<String>
        + getErrors(): List<String>
    }
}

package "showmanagement.persistence" {
    interface ShowProposalRepository {
        + saveInStore(showProposal: ShowProposal): Optional<ShowProposal>
    }
}

GenerateShowProgramController --> ShowProposal
GenerateShowProgramController --> FigureValidationPlugin
GenerateShowProgramController --> DroneProgramsGenerator
GenerateShowProgramController --> DroneGenericPlugin
GenerateShowProgramController --> ShowProposalRepository

@enduml
